# robo-arc

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile_example.toml  Pipfile  README.md  basic_python_bot_for_eval.py  boorus.json  config.toml.example  full_memory.sh  reasonable_memory.sh  rust-toolchain  sqlx-data.json  tokens.toml.example  translate.py
eval/: Cargo.toml
eval/src/: main.rs
migrations/: 2020-06-17_12-35-31_robo-arc.sql  2020-06-21_01-47-44_use_default_on_webhook_twitch.sql  2020-06-23_17-26-43_reminder.sql  2020-06-24_01-35-01_muted_role.sql  2020-07-02_04-43-01_temporal_mute.sql  2020-07-03_02-48-27_permanent_ban.sql  2020-07-05_06-20-31_anti_spam.sql  2020-07-08_12-17-08_streamers_update.sql  2020-07-17_10-35-26_message_logs.sql  20200801082402_primary_key_sorting.sql  20200809083439_logging_channels.sql  20201009025503_logging_to_webhooks.sql  20210731143217_new_osu_config.sql
osu_data/recent/: majorowsky.json  mrekk.json  navajo.json  vicky1.json  vicky2.json
src/: config.rs  events.rs  framework.rs  framework_methods.rs  global_data.rs  logging.rs  main.rs  notifications.rs
src/cogs/: booru.rs
src/commands/: basic_subcommand_file.rs  booru.rs  configuration.rs  dictionary.rs  fun.rs  games.rs  image_manipulation.rs  meta.rs  mod.rs  moderation.rs  music.rs  new_osu.rs  osu.rs  sankaku.rs  serenity_docs.rs
src/commands/new_osu/: mod.rs  new_configure_osu.rs  new_recent.rs
src/logging/: events.rs  messages.rs  mod.rs  senders.rs  senders_old.rs
src/utils/: basic_functions.rs  booru.rs  checks.rs  database.rs  logging.rs  mod.rs  osu.rs  osu_model.rs
