[package]
name = "arc_bot"
version = "0.2.4-alpha"
authors = ["nitsuga5124 <nitsuga5124@gmail.com>"]
edition = "2018"
license = "MPL-v2"
readme = "README.md"
description = "A Highly General-Purpose, Multi-Guild Discord bot"
keywords = ["discord", "bot", "serenity"]
repository = "https://gitlab.com/nitsuga5124/robo-arc/"
#bot_invite = "https://discordapp.com/api/oauth2/authorize?client_id=551759974905151548&scope=bot&permissions=825748694"
#bot_owner = 182891574139682816
#prefixes = [".", "mention", "configurable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # a lot of github smh
toml = "0.5.6" # https://github.com/alexcrichton/toml-rs
regex = "1.3.6" # https://github.com/rust-lang/regex
bitflags = "1.2.1" # https://github.com/bitflags/bitflags
num-format = "0.4.0" # https://github.com/bcmyers/num-format
serde_json = "1.0.50" # https://github.com/serde-rs/json
serde-aux = "0.6.1" # https://github.com/vityafx/serde-aux
image = "0.23.2" # https://github.com/image-rs/image
qrcode = "0.12.0" # https://github.com/kennytm/qrcode-rust
tracing = "0.1.13" # https://github.com/tokio-rs/tracing
tracing-subscriber = "0.2.3" # https://github.com/tokio-rs/tracing
tracing-log = "0.1.1" # https://github.com/tokio-rs/tracing
futures = "0.3.4" # https://github.com/rust-lang/futures-rs
http = "0.2.1" # https://github.com/hyperium/http
rust-crypto = "0.2.36" # https://github.com/dagenix/rust-crypto
hex = "0.4.2" # https://github.com/KokaKiwi/rust-hex
#photon-rs = "0.2.0" # https://github.com/silvia-odwyer/photon
photon-rs = { git = "https://github.com/silvia-odwyer/photon" }
dotenv = "0.15.0" # https://github.com/dotenv-rs/dotenv
loc = "0.5.0" # https://github.com/cgag/loc
walkdir = "2.3.1" # https://github.com/BurntSushi/walkdir
failure = "0.1.8" # https://github.com/rust-lang-nursery/failure
racer = "2.1.34" # https://github.com/racer-rust/racer/
warp = "0.2.3" # https://github.com/seanmonstar/warp/
chrono = "0.4.11" # https://github.com/chronotope/chrono
humantime = "2.0.0" # https://github.com/tailhook/humantime
fasteval = "0.2.4" # https://github.com/likebike/fasteval
darkredis = "0.7.0" # https://github.com/bunogi/darkredis
num_cpus = "1.13.0" # https://github.com/seanmonstar/num_cpus 
 
openssl = { version = "*", optional = true }

[features]
default = ["reqwest/default-tls"]
vendored-openssl = ["openssl/vendored"]
 
# https://github.com/rust-random/rand
[dependencies.rand]
version = "0.7.3"
features = ["getrandom", "std"]

[dependencies.tokio]
version = "0.2.13"
features = ["full"]

# https://github.com/serenity-rs/serenity
[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "native_tls_backend", "absolute_ratelimits", "collector", "voice"]

# https://github.com/seanmonstar/reqwest
[dependencies.reqwest]
version = "*"
features = ["json"]

# https://github.com/serde-rs/serde
# https://serde.rs/
[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[dependencies.sqlx]
#version = "0.3"
git = "https://github.com/launchbadge/sqlx/"
branch = "master"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "offline", "chrono"]

# https://github.com/tafia/quick-xml
[dependencies.quick-xml]
version = "0.18.1"
features = ["serialize"]

[dependencies.serenity-lavalink]
git = "https://gitlab.com/nitsuga5124/serenity-lavalink/"
branch = "master"

# used for profiling for flamegraph
# https://github.com/flamegraph-rs/flamegraph
[profile.release]
debug = true
