[package]
name = "arc_bot"
version = "0.3.0-alpha"
authors = ["nitsuga5124 <nitsuga5124@gmail.com>"]
edition = "2018"
license = "MPL-v2"
readme = "README.md"
description = "A Highly General-Purpose, Multi-Guild Discord bot"
keywords = ["discord", "bot", "serenity"]
repository = "https://gitlab.com/nitsuga5124/robo-arc/"
#bot_invite = "https://discordapp.com/api/oauth2/authorize?client_id=551759974905151548&scope=bot&permissions=825748694"
#bot_owner = 182891574139682816
#prefixes = [".", "mention", "configurable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # a lot of github smh
toml = "0.5" # https://github.com/alexcrichton/toml-rs
regex = "1.3" # https://github.com/rust-lang/regex
bitflags = "1.2" # https://github.com/bitflags/bitflags
num-format = "0.4" # https://github.com/bcmyers/num-format
serde_json = "1.0" # https://github.com/serde-rs/json
serde-aux = "0.6" # https://github.com/vityafx/serde-aux
image = "0.23" # https://github.com/image-rs/image
qrcode = "0.12" # https://github.com/kennytm/qrcode-rust
tracing = "0.1" # https://github.com/tokio-rs/tracing
tracing-subscriber = "0.2" # https://github.com/tokio-rs/tracing
tracing-log = "0.1" # https://github.com/tokio-rs/tracing
tracing-futures = "0.2" # https://github.com/tokio-rs/tracing
futures = "0.3" # https://github.com/rust-lang/futures-rs
http = "0.2" # https://github.com/hyperium/http
rust-crypto = "0.2" # https://github.com/dagenix/rust-crypto
hex = "0.4" # https://github.com/KokaKiwi/rust-hex
#photon-rs = "0.2" # https://github.com/silvia-odwyer/photon
photon-rs = { git = "https://github.com/silvia-odwyer/photon" }
dotenv = "0.15" # https://github.com/dotenv-rs/dotenv
loc = "0.5" # https://github.com/cgag/loc
walkdir = "2.3" # https://github.com/BurntSushi/walkdir
failure = "0.1" # https://github.com/rust-lang-nursery/failure
racer = "=2.1.37" # https://github.com/racer-rust/racer/
warp = "0.2" # https://github.com/seanmonstar/warp/
chrono = "0.4" # https://github.com/chronotope/chrono
humantime = "2.0" # https://github.com/tailhook/humantime
fasteval = "0.2" # https://github.com/likebike/fasteval
darkredis = "0.7" # https://github.com/bunogi/darkredis
num_cpus = "1.13" # https://github.com/seanmonstar/num_cpus 
clap = "2.33" # https://github.com/clap-rs/clap
 
openssl = { version = "*", optional = true }

[features]
default = ["reqwest/default-tls"]
vendored-openssl = ["openssl/vendored"]
 
# https://github.com/rust-random/rand
[dependencies.rand]
version = "0.7"
features = ["getrandom", "std"]

[dependencies.tokio]
version = "0.2"
features = ["full"]

# https://github.com/serenity-rs/serenity
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
rev = "0b46b476cc84deae38bbfacb8c7d3d8070f93ccf"
#branch = "next"
#version = "0.9.0-rc.2"
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "native_tls_backend", "absolute_ratelimits", "collector", "voice"]

# https://github.com/seanmonstar/reqwest
[dependencies.reqwest]
version = "0.10"
features = ["json"]

# https://github.com/serde-rs/serde
# https://serde.rs/
[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
#version = "0.4.0-beta.1"
git = "https://github.com/launchbadge/sqlx/"
branch = "master"
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "offline", "chrono"]

# https://github.com/tafia/quick-xml
[dependencies.quick-xml]
version = "0.18"
features = ["serialize"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/nitsuga5124/lavalink-rs/"
branch = "songbird"
#version = "0.1.1-alpha"

[dependencies.songbird]
git = "https://github.com/serenity-rs/serenity/"
rev = "0b46b476cc84deae38bbfacb8c7d3d8070f93ccf"
#branch = "next"
default-features = false
features = ["serenity-native", "gateway"]

#[patch.crates-io.serenity]
#git = "https://github.com/serenity-rs/serenity"
#branch = "next"

# used for profiling for flamegraph
# https://github.com/flamegraph-rs/flamegraph
[profile.release]
debug = true
