[package]
name = "arc_bot"
version = "0.3.4-alpha"
authors = ["vicky5124 <vickyf5124@gmail.com>"]
edition = "2018"
license = "MPL-v2"
readme = "README.md"
description = "A Highly General-Purpose, Multi-Guild Discord bot"
keywords = ["discord", "bot", "serenity"]
repository = "https://gitlab.com/vicky5124/robo-arc/"
#bot_invite = "https://discord.com/api/oauth2/authorize?client_id=551759974905151548&scope=bot+applications.commands&permissions=808971478"
#bot_owner = 182891574139682816
#prefixes = [".", "mention", "configurable"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # a lot of github smh
toml = "0.5" # https://github.com/alexcrichton/toml-rs
regex = "1" # https://github.com/rust-lang/regex
bitflags = "1" # https://github.com/bitflags/bitflags
num-format = "0.4" # https://github.com/bcmyers/num-format
serde_json = "1" # https://github.com/serde-rs/json
serde-aux = "2" # https://github.com/vityafx/serde-aux
image = "0.23" # https://github.com/image-rs/image
libwebp-image = "0.2" # https://github.com/qnighy/libwebp-image-rs
qrcode = "0.12" # https://github.com/kennytm/qrcode-rust
tracing = "0.1" # https://github.com/tokio-rs/tracing
tracing-subscriber = "0.2" # https://github.com/tokio-rs/tracing
tracing-log = "0.1" # https://github.com/tokio-rs/tracing
futures = "0.3" # https://github.com/rust-lang/futures-rs
http = "0.2" # https://github.com/hyperium/http
rust-crypto = "0.2" # https://github.com/dagenix/rust-crypto
hex = "0.4" # https://github.com/KokaKiwi/rust-hex
photon-rs = "0.3" # https://github.com/silvia-odwyer/photon
dotenv = "0.15" # https://github.com/dotenv-rs/dotenv
walkdir = "2" # https://github.com/BurntSushi/walkdir
indexmap = "=1.6.2" # https://github.com/tkaitchuck/aHash/issues/95
itertools = "0.7" # https://github.com/bluss/rust-itertools
tokei = "12" # https://github.com/xampprocky/tokei
warp = "0.3" # https://github.com/seanmonstar/warp/
chrono = "0.4" # https://github.com/chronotope/chrono
humantime = "2.0" # https://github.com/tailhook/humantime
fasteval = "0.2" # https://github.com/likebike/fasteval
darkredis = "0.8" # https://github.com/bunogi/darkredis
num_cpus = "1" # https://github.com/seanmonstar/num_cpus 
clap = "2" # https://github.com/clap-rs/clap

#racer = "=2.1.40" # https://github.com/racer-rust/racer/
 
#openssl = { version = "*", optional = true }
#
#[features]
#default = ["reqwest/default-tls"]
#vendored-openssl = ["openssl/vendored"]
 
# https://github.com/rust-random/rand
[dependencies.rand]
version = "0.8"
features = ["getrandom", "std"]

[dependencies.tokio]
version = "1"
features = ["full"]

# https://github.com/serenity-rs/serenity
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
#git = "https://github.com/acdenisSK/serenity"
#branch = "optional_deserialisation"
#version = "0.10"
default-features = false
features = ["builder", "cache", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend", "absolute_ratelimits", "collector", "voice", "unstable_discord_api"]

# https://github.com/seanmonstar/reqwest
[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "multipart", "stream", "rustls-tls"]

# https://github.com/serde-rs/serde
# https://serde.rs/
[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
#git = "https://github.com/launchbadge/sqlx/"
#branch = "master"
default-features = false
features = ["macros", "postgres", "uuid", "offline", "chrono", "runtime-tokio-rustls"]

# https://github.com/tafia/quick-xml
[dependencies.quick-xml]
version = "0.22"
features = ["serialize"]

[dependencies.osu_perf]
#git = "https://gitlab.com/JackRedstonia/osu-perf"
git = "https://gitlab.com/vicky5124/osu-perf"
branch = "types_redo"

# https://github.com/uuid-rs/uuid
[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.lavalink-rs]
git = "https://gitlab.com/vicky5124/lavalink-rs/"
branch = "master"
#version = "0.6.0-rc"
features = ["rustls", "andesite", "serenity"]

[dependencies.songbird]
#git = "https://github.com/serenity-rs/songbird/"
#branch = "current"
version = "0.2"
default-features = false
features = ["serenity-rustls", "gateway"]

[patch.crates-io.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
#git = "https://github.com/acdenisSK/serenity"
#branch = "optional_deserialisation"


# used for profiling for flamegraph
# https://github.com/flamegraph-rs/flamegraph
[profile.release]
debug = true
